--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -62,7 +62,13 @@
           <span>a</span>
           <span>b</span>
           <span></span>
-          <span>1</span>
+          <span>1,</span>
+          <span></span>
+          <span>2</span>
+          <span></span>
+          <span>y</span>
+          <span></span>
+          <span>3</span>
         </h1>
       </div>
     </header>
@@ -70,13 +76,31 @@
     <section>
       <div class="container mt-5 mb-5 d-flex">
         <img src="./yo2.jpg" alt="" height="250" width="" class="me-5" />
-        <p>
-          Me llamo <strong>Daniel Emilio Fuentes Portaluppi</strong>, la mayoría
+        <p class="justify-text">
+          Me llamo <strong class="name">Daniel Emilio Fuentes Portaluppi</strong>, la mayoría
           de mis amigos me conocen como "Portaluppi". Tengo 20 años soy de la
           Ciudad de México pero he vivido toda mi vida en Querétaro. Estudió en
           el Tec de Monterrey, la carrera de ITC (Ingeniería en Tecnologías
-          Computacionales) y actualmente estoy en 4to semestre.
-        </p>
+          Computacionales) y actualmente estoy en 4to semestre.<br>
+          <strong>Matrícula: A01708302</strong></p>
+        <ul>
+          <li>
+            <i class="fas fa-map-marker-alt"></i>
+            <span>Querétaro, México</span>
+          </li>
+          <li>
+            <i class="fas fa-birthday-cake"></i>
+            <span>3 de Septiembre de 2002</span>
+          </li>
+          <li>
+            <i class="fas fa-envelope"></i>
+            <span>danfupo@outlook.com</span>
+          </li>
+          <li>
+            <i class="fas fa-envelope"></i>
+            <span>a01708302@tec.mx</span>
+          </li>
+        </ul>
       </div>
     </section>
 
@@ -89,10 +113,183 @@
               class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Videojuegos</h5>
-                <p class="card-text justify-text">EXAMPLE</p>
+                <p class="card-text justify-text">
+                  Me gustan mucho los videojuegos, desde los casuales de móvil a los más complejos de consola.
+                  Usualmente lo que juegó son shooters multijugador como Apex Legends, Warzone u
+                  Overwatch.
+                  Pero también disfruto de un buen juego de mundo abierto como Red Dead Redemption 2,
+                  Zelda Breath of the Wild o Horizon Zero Dawn.
+                </p>
               </div>
             </div>
           </div>
+
+          <div class="col">
+            <div class="card">
+              <img src="https://static01.nyt.com/images/2019/04/09/well/physed-swim/merlin_109418863_5d2f2651-dc19-456a-878e-9e08018b5dda-articleLarge.jpg?quality=75&auto=webp&disable=upscale"
+              class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Natación</h5>
+                <p class="card-text justify-text">
+                  Soy nadador de alto rendimiento desde los 7 años. El estilo que mejor se me da es el de dorso, y la prueba en la que mejor soy es en 
+                  los 200mts del mismo estilo. He ido a 10 Nacionales y 3 Olimpiadas Nacionales.
+                  Mis mayores logros han sido un 6to lugar en la
+                  Olimpiada Nacional y un 2ndo Lugar en el Nacional C. Corto. B, además de algunas medallas a nivel estatal. 
+                  Lastimosamente me lesioné el hombro en 2019 y me tuvieron que operar, pero ya estoy de vuelta.
+                </p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container mt-5 mb-5">
+        <h2 class="text-center">Preguntas</h2>
+        <p>
+          <ul>
+            <li><strong>¿Cuál es la diferencia entre Internet y la World Wide Web?</strong></li>
+            <p class="justify-text">
+              Internet es una inmensa red de computadoras alrededor de todo el mundo conectadas entre sí. 
+              En cambio, la web (la World Wide Web) es una enorme colección de páginas que se asienta sobreesa red de computadoras.
+            </p>
+            <li><strong>¿Cuáles son las partes de un URL?</strong></li>
+            <p class="justify-text">
+              URL significa Uniform Resource Locator. 
+              Los elementos de un URL son:
+              <ul>
+                <li>HTTPS</li> 
+                <li>Subdominio</li>
+                <li>Dominio</li>
+                <li>TLD</li>
+                <li>Ruta</li>
+                <li>Parámetro</li>
+                <li>Etiqueta</li>
+              </ul>
+            </p>
+            <li><strong>¿Cuál es el propósito de los métodos HTTP: GET, HEAD, POST, PUT, PATCH, DELETE?</strong></li>
+            <p class="justify-text">
+              Los métodos HTTP son las acciones que se pueden realizar en un recurso. Los más comunes son GET, HEAD, POST, PUT, PATCH y DELETE.
+              GET: Se utiliza para obtener información de un recurso.
+              HEAD: Se utiliza para obtener los metadatos de un recurso.
+              POST: Se utiliza para enviar información a un recurso.
+              PUT: Se utiliza para actualizar un recurso.
+              PATCH: Se utiliza para actualizar parcialmente un recurso.
+              DELETE: Se utiliza para eliminar un recurso.
+            </p>
+            <li><strong>¿Qué método HTTP se debe utilizar al enviar un formulario HTML, por ejemplo cuando ingresas tu usuario y contraseña en algún sitio? ¿Por qué?</strong></li>
+            <p class="justify-text">
+              Se debe utilizar POST. Esto se debe a que el formulario contiene información sensible que no debe ser visible para el usuario.
+            </p>
+            <li><strong>¿Qué método HTTP se utiliza cuando a través de un navegador web se accede a una página a través de un URL?</strong></li>
+            <p class="justify-text">
+              Se utiliza GET. Porque el navegador web envía la información a través de la URL y la URL es un recurso.
+            </p>
+            <li><strong>Un servidor web devuelve una respuesta HTTP con código 200. ¿Qué significa esto? ¿Ocurrió algún error?</strong></li>
+            <p class="justify-text">
+              El código de respuesta 200, ok, es un código de respuesta del servidor HTTP que nos ofrecerá el estatus ante una petición estandar correcta a la que puede responder sin problemas. 
+              La petición enviada por el cliente, navegador o robot, fue recibida correctamente, puede ser entendida por el servidor y aceptada por éste.
+            </p>
+            <li><strong>¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta que intentó acceder al sitio y se encontró con un error 404? ¿Por qué?</strong></li>
+            <p class="justify-text">
+              Si es responsabilidad del desarrollador corregir un sitio web si un usuario reporta que intentó acceder al sitio y se encontró con un error 404. 
+              Esto se debe a que el error 404 significa que el recurso que se intentó acceder no existe. Por lo que si esto no debería suceder como desarrollador debe arreglarlo.
+            </p>
+            <li><strong>¿Es responsabilidad del desarrollador corregir un sitio web si un usuario reporta que intentó acceder al sitio y se encontró con un error 500? ¿Por qué?</strong></li>
+            <p class="justify-text">
+              No es responsabilidad del desarrollador corregir un sitio web si un usuario reporta que intentó acceder al sitio y se encontró con un error 500. 
+              Esto se debe a que el error 500 significa que el servidor no pudo procesar la solicitud. Por lo que es un error ajeno al desarrollador.
+            </p>
+            <li><strong>¿Qué significa que un atributo HTML5 esté depreciado o desaprobado (deprecated)? Menciona algunos elementos de HTML 4 que en HTML5 estén desaprobados.</strong></li>
+            <p class="justify-text">
+              Los tags y atributos desaprobados son partes del estándar HTML cuyo uso ya no es recomendado. Esto sucede dado que el estándar es actualizado de vez en cuando
+              (por ejemplo, de la versión 3.0 a la 4.0) y alguno tags o características del lenguaje son agregada, removidas o desaprobadas.<br>
+              
+              Elementos desaprobados en favor de otros elementos:
+              <ul>
+               <li>applet: Reemplazado por el tag HTML object.</li>
+               <li>dir: Reemplazado por el tag HTML ul.</li>
+               <li>isindex: Reemplazado por el tag HTML input.</li>
+               <li>menu: Reemplazado por el tag HTML ul.</li>
+              </ul>
+
+              <br>Elementos desaprobados en favor de las hojas de estilo:
+              <ul>
+                <li>basefont</li>
+                <li>center</li>
+                <li>font</li>
+                <li>s</li>
+                <li>strike</li>
+                <li>u</li>
+              </ul>
+            </p>
+            <li><strong>¿Cuáles son las diferencias principales entre HTML 4 y HTML5?</strong></li>
+            <p class="justify-text">
+              HTML5 mejora varios aspectos de HTML4 que estaban obsoletos y eran difíciles de trabajar. 
+              Además, HTML5 puede hacer muchas cosas de forma nativa, mientras que HTML4 depende por completo 
+              de sistemas que hace tiempo que están en desuso, como Silverlight, Java Web Start y Flash.
+            </p>
+            <li><strong>¿Qué componentes de estructura y estilo tiene una tabla?</strong></li>
+            <p class="justify-text">
+              Las tablas tienen dos componentes principales: la estructura y el estilo.
+              La estructura de una tabla se define con las etiquetas table, tr, td, th, thead, tbody, tfoot, caption.
+              El estilo de una tabla se define con las etiquetas colgroup, col, style, align, bgcolor, border, cellpadding, cellspacing, frame, rules, summary, width.
+            </p>
+            <li><strong>¿Cuáles son los principales controles de una forma HTML5?</strong></li>
+            <p class="justify-text">
+              Los principales controles de una forma HTML5 son:
+              <ul>
+                <li>input</li>
+                <li>textarea</li>
+                <li>select</li>
+                <li>button</li>
+                <li>output</li>
+                <li>progress</li>
+                <li>meter</li>
+                <li>fieldset</li>
+                <li>legend</li>
+                <li>label</li>
+                <li>form</li>
+              </ul><br>
+            </p>
+            <li><strong>¿Qué tanto soporte HTML5 tiene el navegador que utilizas?</strong></li>
+            <p class="justify-text">
+              El navegador que utilizo es Opera 94.0 on macOS Catalina 10.15 y tiene 474 de 555 puntos.
+            </p>
+            <li><strong>Sobre el ciclo de vida y desarrollo de los sistemas de información:</strong></li>
+            <ul>
+              <li><strong>¿Cuál es el ciclo de vida de los sistemas de información?</strong></li>
+              <p class="justify-text">
+                <ul>
+                  <li>Planificación</li>
+                  <li>Análisis</li>
+                  <li>Diseño</li>
+                  <li>Implementación</li>
+                  <li>Pruebas</li>
+                  <li>Mantenimiento</li>
+                </ul>
+              </p>
+              <li><strong>¿Cuál es el ciclo de desarrollo de sistemas de información?</strong></li>
+              <p class="justify-text">
+                <ul>
+                  <li>Investigación preliminar</li>
+                  <li>Determinación de requisitos</li>
+                  <li>Diseño</li>
+                  <li>Pruebas</li>
+                  <li>Implementación y pruebas</li>
+                </ul>
+              </p>
+            </ul>
+          </ul>
+        </p>
+      </div>
+    </section>
+
+    <section>
+      <h1>Bibliografías</h1>
+
     </section>
 
     <button class="btn-scrolltop" id="btn_scrolltop">
@@ -120,69 +317,24 @@
             <figure>
               <a href="/">
                 <img
-                  src="images/Logos/cym_horiz.png"
-                  alt="Logo de control y medición"
+                  src="./LogotipoTransHorizontalAzul.png"
+                  alt="..."
                 />
               </a>
             </figure>
           </div>
           <div class="box">
-            <h2>Sobre Nosotros</h2>
-            <p class="justify-text">
-              Desde ese punto de vista para GRUPO CONTROL Y MEDICIÓN significa
-              aportar valor al cliente, esto es, ofrecer unas condiciones de uso
-              del producto o servicio superiores a las que el cliente espera
-              recibir a un precio accesible.
-            </p>
-            <p class="justify-text">
-              También la calidad se refiere a minimizar las pérdidas que un
-              producto pueda causar a la sociedad humana mostrando cierto
-              interés por parte de la empresa a mantener la satisfacción del
-              cliente.
-            </p>
-            <p class="justify-text">
-              Una visión actual del concepto de calidad indica que calidad es
-              entregar al cliente no lo que quiere, sino lo que nunca había
-              imaginado que quería y que una vez que lo obtenga, se dé cuenta de
-              que era lo que siempre había querido.
-            </p>
-          </div>
-          <div class="box">
-            <h2>Síguenos</h2>
+            <h2>Utilicé el IDE Visual Studio Code</h2>
             <div class="social-media">
               <a
-                href="https://www.facebook.com/controlymedicion/"
-                class="fa fa-facebook"
+                href="https://github.com/danfupo03/TC2005B"
+                class="fa fa-github"
                 target="_blank"
                 rel="noopener noreferrer"
               ></a>
               <a
-                href="https://www.instagram.com/controlymedicion/"
-                class="fa fa-instagram"
-                target="_blank"
-                rel="noopener noreferrer"
-              ></a>
-              <a
-                href="https://www.youtube.com/channel/UCEkwrnRur8nrffahkA0Kn1Q"
-                class="fa fa-youtube"
-                target="_blank"
-                rel="noopener noreferrer"
-              ></a>
-              <a
-                href="https://twitter.com/CYM_Mexico?prefetchTimestamp=1572883916527"
-                class="fa fa-twitter"
-                target="_blank"
-                rel="noopener noreferrer"
-              ></a>
-              <a
-                href="https://es.linkedin.com/company/controlymedición"
-                class="fa fa-linkedin"
-                target="_blank"
-                rel="noopener noreferrer"
-              ></a>
-              <a
-                href="https://www.youtube.com/channel/UCE14rKML4jf-Si8ts1KqgFw"
-                class="fa fa-youtube"
+                href="https://code.visualstudio.com"
+                class="fa fa-code"
                 target="_blank"
                 rel="noopener noreferrer"
               ></a>
@@ -191,7 +343,7 @@
         </div>
         <div class="group-2">
           <small
-            >&copy; 2022 <b>CONTROL Y MEDICIÓN</b> - Todos los Derechos
+            >&copy; 2022 <b>Daniel Fuentes</b> - Todos los Derechos
             Reservados.</small
           >
         </div>
