--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -205,9 +205,9 @@
             <li><strong>¿Qué significa que un atributo HTML5 esté depreciado o desaprobado (deprecated)? Menciona algunos elementos de HTML 4 que en HTML5 estén desaprobados.</strong></li>
             <p class="justify-text">
               Los tags y atributos desaprobados son partes del estándar HTML cuyo uso ya no es recomendado. Esto sucede dado que el estándar es actualizado de vez en cuando
-              (por ejemplo, de la versión 3.0 a la 4.0) y alguno tags o características del lenguaje son agregada, removidas o desaprobadas.<br>
+              (por ejemplo, de la versión 3.0 a la 4.0) y alguno tags o características del lenguaje son agregada, removidas o desaprobadas.
               
-              Elementos desaprobados en favor de otros elementos:
+              <br>Elementos desaprobados en favor de otros elementos:
               <ul>
                <li>applet: Reemplazado por el tag HTML object.</li>
                <li>dir: Reemplazado por el tag HTML ul.</li>
@@ -288,8 +288,19 @@
     </section>
 
     <section>
-      <h1>Bibliografías</h1>
-
+      <div class="container mt-5 mb-5">
+        <h1>Referencias</h1>
+        <ul class="justify-text">
+          <li>05.Tags y atributos desaprobados en HTML - TODO HTML. (s. f.). <a href="https://sites.google.com/site/dwebhtml/reference/deprecated">https://sites.google.com/site/dwebhtml/reference/deprecated</a></li>
+          <li>Barron, B. (2021, 8 abril). HTML vs HTML5: Conoce las diferencias cruciales entre ellos. Kinsta®. <a href="https://kinsta.com/es/blog/html-vs-html5/">https://kinsta.com/es/blog/html-vs-html5/</a></li>
+          <li>BBC News Mundo. (2019, 12 marzo). ¿Cuál es la diferencia entre internet y la web? (y por qué muchos las confunden). <a href="https://www.bbc.com/mundo/noticias-47538812">https://www.bbc.com/mundo/noticias-47538812</a></li> 
+          <li>Ciclo de vida de un sistema de información: fases y componentes. (s. f.). <a href="https://blog.powerdata.es/el-valor-de-la-gestion-de-datos/ciclo-de-vida-de-un-sistema-de-informacion-fases-y-componentes">https://blog.powerdata.es/el-valor-de-la-gestion-de-datos/ciclo-de-vida-de-un-sistema-de-informacion-fases-y-componentes</a></li> 
+          <li>Morales, W. (2021, 1 junio). Métodos HTTP - POST, GET, PUT, DELETE. Estilo Web. <a href="http://estilow3b.com/metodos-http-post-get-put-delete/">http://estilow3b.com/metodos-http-post-get-put-delete/</a></li> 
+          <li>Pukocz, E. (2022, 24 marzo). Partes de una URL con ejemplos y explicación fácil. Edyta Pukocz. <a href="https://edytapukocz.com/url-partes-ejemplos-facil/">https://edytapukocz.com/url-partes-ejemplos-facil/</a></li> 
+          <li>¿Qué es el código de respuesta 200 OK? (2020, 20 octubre). Human Level. <a href="https://www.humanlevel.com/diccionario-marketing-online/codigo-de-respuesta-200-ok">https://www.humanlevel.com/diccionario-marketing-online/codigo-de-respuesta-200-ok</a></li> 
+          <li>Yedra, Y. (s. f.). Ciclo de vida de los sistemas de informacion. <a href="https://es.slideshare.net/YaskellyYedra/ciclo-de-vida-de-los-sistemas-de-informacion-73671543">https://es.slideshare.net/YaskellyYedra/ciclo-de-vida-de-los-sistemas-de-informacion-73671543</a></li>
+        </ul>
+      </div>
     </section>
 
     <button class="btn-scrolltop" id="btn_scrolltop">
