Added la3 instr.

--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -147,7 +147,7 @@
 
     <section>
       <div class="container mt-5 mb-5">
-        <h2 class="text-center">Preguntas</h2>
+        <h2 class="text-center">Preguntas Lab1</h2>
         <p>
           <ul>
             <li><strong>¿Cuál es la diferencia entre Internet y la World Wide Web?</strong></li>
@@ -300,6 +300,33 @@
           <li>¿Qué es el código de respuesta 200 OK? (2020, 20 octubre). Human Level. <a href="https://www.humanlevel.com/diccionario-marketing-online/codigo-de-respuesta-200-ok">https://www.humanlevel.com/diccionario-marketing-online/codigo-de-respuesta-200-ok</a></li> 
           <li>Yedra, Y. (s. f.). Ciclo de vida de los sistemas de informacion. <a href="https://es.slideshare.net/YaskellyYedra/ciclo-de-vida-de-los-sistemas-de-informacion-73671543">https://es.slideshare.net/YaskellyYedra/ciclo-de-vida-de-los-sistemas-de-informacion-73671543</a></li>
         </ul>
+      </div>
+    </section>
+
+    <section>
+      <div class="container mt-5 mb-5">
+        <h2>Preguntas Lab2</h2>
+        <p>
+          <ul>
+            <li>Como ingeniero de software ¿cuál es tu recomendación sobre el uso de !important en un CSS? </li>
+            <p class="justify-text">
+              Con !important puedes asegurar para el futuro varios elementos de tu página, para evitar que durante el desarrollo se modifique algo importante en el estilo.
+              Pero se debe usar con precaución para evitra problemas en el estilo en un futuro. 
+            </p>
+            <li>Si se pone una imagen de fondo en una página HTML, ¿por qué debe escogerse con cuidado?</li>
+            <p class="justify-text">
+              Porque el peso de la imagen puede afecta el rendimiento de la página.
+            </p>
+            <li>Como ingeniero de software, ¿cuál es tu recomendación al elegir las unidades de un propiedad de estilo entre %, px y pt?</li>
+            <p class="justify-text">
+              Se recomienda usar % para el ancho y el alto de un elemento, px para el tamaño de la fuente y pt para el tamaño de la letra.
+            </p>
+            <li>¿Por qué el uso de una versión minimizada del CSS mejora el rendimiento del sitio?</li>
+            <p class="justify-text">
+              Porque el navegador no tiene que descargar el archivo CSS completo, sino que solo descarga el archivo CSS minimizado.
+            </p>
+          </ul>
+        </p>
       </div>
     </section>
 
