--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -308,20 +308,20 @@
         <h2>Preguntas Lab2</h2>
         <p>
           <ul>
-            <li>Como ingeniero de software ¿cuál es tu recomendación sobre el uso de !important en un CSS? </li>
+            <li><strong>Como ingeniero de software ¿cuál es tu recomendación sobre el uso de !important en un CSS?</strong></li>
             <p class="justify-text">
               Con !important puedes asegurar para el futuro varios elementos de tu página, para evitar que durante el desarrollo se modifique algo importante en el estilo.
               Pero se debe usar con precaución para evitra problemas en el estilo en un futuro. 
             </p>
-            <li>Si se pone una imagen de fondo en una página HTML, ¿por qué debe escogerse con cuidado?</li>
+            <li><strong>Si se pone una imagen de fondo en una página HTML, ¿por qué debe escogerse con cuidado?</strong></li>
             <p class="justify-text">
               Porque el peso de la imagen puede afecta el rendimiento de la página.
             </p>
-            <li>Como ingeniero de software, ¿cuál es tu recomendación al elegir las unidades de un propiedad de estilo entre %, px y pt?</li>
+            <li><strong>Como ingeniero de software, ¿cuál es tu recomendación al elegir las unidades de un propiedad de estilo entre %, px y pt?</strong></li>
             <p class="justify-text">
               Se recomienda usar % para el ancho y el alto de un elemento, px para el tamaño de la fuente y pt para el tamaño de la letra.
             </p>
-            <li>¿Por qué el uso de una versión minimizada del CSS mejora el rendimiento del sitio?</li>
+            <li><strong>¿Por qué el uso de una versión minimizada del CSS mejora el rendimiento del sitio?</strong></li>
             <p class="justify-text">
               Porque el navegador no tiene que descargar el archivo CSS completo, sino que solo descarga el archivo CSS minimizado.
             </p>
