--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -41,7 +41,7 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-light" style="background-color: #010811">
+      <nav class="navbar navbar-light nav-back">
         <div class="container-fluid">
           <a href="/" class="navbar-brand">
             <img
