--- a/lab5/lab5.html
+++ b/lab5/lab5.html
@@ -280,6 +280,29 @@
       </div>
     </section>
 
+    <section>
+        <div class="container mt-5 mb-5">
+            <h3>¿Qué es el Material Design?</h3>
+            <p class="justify-text">
+                Material Design es un concepto, una filosofía, unas pautas enfocadas al diseño utilizado en Android,
+                pero también en la web y en cualquier plataforma.<br>
+                <br><strong>¿En qué se basa Material Design?</strong><br>
+                <br>Material Design recibe su nombre por estar basado en objetos materiales. 
+                Piezas colocadas en un espacio (lugar) y con un tiempo (movimiento) determinado.
+                Es un diseño donde la profundidad, las superficies, los bordes, las sombras y los colores 
+                juegan un papel principal.
+                Precisamente este diseño basado en objetos es una manera de intentar aproximarse a la realidad, 
+                algo que en un mundo donde todo es táctil y virtual es difícil. Material Design quiere guiarse 
+                por las leyes de la física, donde las animaciones sean lógicas, los objetos se superpongan pero 
+                no puedan atravesarse el uno al otro y demás.
+            </p>
+            <p>
+                <strong>Información recopilada de:<br></strong>
+                <br>- Platzi: Cursos online profesionales de tecnología. (s.f.). <a href="https://platzi.com/tutoriales/1805-materialize/7372-que-es-material-design/?utm_source=google">https://platzi.com/tutoriales/1805-materialize/7372-que-es-material-design/?utm_source=google</a>
+            </p>
+        </div>
+    </section>
+
     <footer>
       <div class="card">
         <div class="card-header">TC2005B</div>
