--- a/lab6/lab6.html
+++ b/lab6/lab6.html
@@ -5,24 +5,17 @@
     <link rel="stylesheet" type="text/css" href="lab6.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>Password Validation</h1>
+    <section>
       <form>
-        <div class="form-control">
-          <label for="password">Password:</label>
-          <input type="password" id="password" />
-        </div>
-        <div class="form-control">
-          <label for="verify-password">Verify Password:</label>
-          <input type="password" id="verify-password" />
-        </div>
-        <button type="submit" id="submit-btn">Submit</button>
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="Insert your password"/>
+        <label for="cnfrm-password">Confirm password</label>
+        <input type="password" id="cnfrm-password" placeholder="Confirm your password"/>
+        <p id="message">Demo text</p>
+        <input type="button" value="Submit"/>
       </form>
-      <p id="message"></p>
-    </div>
-    <div class="container">
-        <button type="button" id="change-text">Cambiar texto</button>
-    </div>
+    </section>
+      
     <script src="lab6.js"></script>
   </body>
 </html>
