--- a/lab6/lab6.html
+++ b/lab6/lab6.html
@@ -3,19 +3,51 @@
   <head>
     <title>Password Validation Page</title>
     <link rel="stylesheet" type="text/css" href="lab6.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <section>
+    <header>
+      <nav class="navbar bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img
+              src="logoTec.png"
+              alt="Logo Tec"
+              width="200"
+              height=""
+              class="d-inline-block align-text-top"
+            />
+          </a>
+        </div>
+      </nav>
+    </header>
+
+    <section class="container mt-5 mb-5">
+      <h1>Laboratorio 6</h1>
+      <p>
+        Con JavaScript y HTML5 [y quizás CSS], desarrolla una página para validar passwords. 
+        La página debe tener una forma con 2 campos, el campo de password, y el campo de verificar password. 
+        Utiliza al máximo tu creatividad e ingeniería para que la página sea un validador de passwords de estado 
+        del arte, con la mejor experiencia para el usuario.
+      </p>
+    </section>
+
+    <section class="container mt-5 mb-5">
       <form>
-        <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Insert your password"/>
+        <label>Password</label>
+        <input onmouseover="this.classList.add('bold')" onmouseout="this.classList.remove('bold')" type="password" id="password" placeholder="Insert your password"/>
         <label for="cnfrm-password">Confirm password</label>
-        <input type="password" id="cnfrm-password" placeholder="Confirm your password"/>
-        <p id="message">Demo text</p>
-        <input type="button" value="Submit"/>
+        <input onmouseover="this.classList.add('italic')" onmouseout="this.classList.remove('italic')" type="password" id="cnfrm-password" placeholder="Confirm your password"/>
+        <p id="message"></p>
+        <input type="button" onclick="checkPassword()" value="Submit"/>
       </form>
     </section>
-      
     <script src="lab6.js"></script>
   </body>
 </html>
