--- a/lab6/lab6.html
+++ b/lab6/lab6.html
@@ -28,26 +28,45 @@
       </nav>
     </header>
 
-    <section class="container mt-5 mb-5">
-      <h1>Laboratorio 6</h1>
-      <p>
-        Con JavaScript y HTML5 [y quizás CSS], desarrolla una página para validar passwords. 
-        La página debe tener una forma con 2 campos, el campo de password, y el campo de verificar password. 
-        Utiliza al máximo tu creatividad e ingeniería para que la página sea un validador de passwords de estado 
-        del arte, con la mejor experiencia para el usuario.
-      </p>
+    <section>
+      <div class="container mt-5 mb-5">
+        <h1 id="myHeader">Laboratorio 6</h1>
+        <div id="warning"></div>
+        <p>
+          1) Con JavaScript y HTML5 [y quizás CSS], desarrolla una página para validar passwords. 
+          La página debe tener una forma con 2 campos, el campo de password, y el campo de verificar password. 
+          Utiliza al máximo tu creatividad e ingeniería para que la página sea un validador de passwords de estado 
+          del arte, con la mejor experiencia para el usuario.
+        </p>
+        <p id="myText">¡Descansa tu mouse aquí si no sabes que contraseña poner!</p>
+      </div>
     </section>
 
-    <section class="container mt-5 mb-5">
-      <form>
-        <label>Password</label>
-        <input onmouseover="this.classList.add('bold')" onmouseout="this.classList.remove('bold')" type="password" id="password" placeholder="Insert your password"/>
-        <label for="cnfrm-password">Confirm password</label>
-        <input onmouseover="this.classList.add('italic')" onmouseout="this.classList.remove('italic')" type="password" id="cnfrm-password" placeholder="Confirm your password"/>
-        <p id="message"></p>
-        <input type="button" onclick="checkPassword()" value="Submit"/>
-      </form>
+    <section>
+      <div class="container mt-5 mb-5">
+        <form>
+          <label>Password</label>
+          <input onmouseover="this.classList.add('bold')" onmouseout="this.classList.remove('bold')" type="password" id="password" placeholder="Insert your password"/>
+          <label for="cnfrm-password">Confirm password</label>
+          <input onmouseover="this.classList.add('italic')" onmouseout="this.classList.remove('italic')" type="password" id="cnfrm-password" placeholder="Confirm your password"/>
+          <p id="message"></p>
+          <input type="button" onclick="checkPassword()" value="Submit"/>
+        </form>
+      </div>
     </section>
+
+    <section>
+      <div class="container mt-5 mb-5">
+        <p>
+          2) Cambia el estilo de las letras de alguna parte del documento con eventos diferentes a onClick. 
+          <strong style="color: black;">Respuesta:</strong> Lo que hice fue que cuando el mouse se pone sobre el campo de password, cambia a "bold" 
+          y en el de confirmar password, cambia a "italic".
+          <br><br>3) Para los campos de una forma, o para algún texto corto del documento, haz que de manera 
+          dinámica aparezca ayuda o información relevante o complementaria. Usa tu creatividad.
+        </p>
+      </div>
+    </section>
+
     <script src="lab6.js"></script>
   </body>
 </html>
