Upload final lab6

--- a/lab6/lab6.html
+++ b/lab6/lab6.html
@@ -108,18 +108,18 @@
           de esperar la respuesta del servidor. <br /><br /><strong style="color: black"
           >2) ¿Cómo puedes
           saltarte la seguridad de validaciones hechas con JavaScript?</strong>
-
-          <br /><br /><strong style="color: black"
+          <br>Desactivando JavaScript en el navegador.
+          <br/><br /><strong style="color: black"
           >3) Si te puedes saltar la seguridad de las validaciones de
           JavaScript, entonces ¿por qué la primera pregunta dice que es una
           buena práctica?</strong>
+          <br>Porque ayuda a mejorar la experiencia de usuario. 
+          <br>
         </p>
         <h2 style="color: black;">Referencias</h2>
-        <p>uniwebsidad. (s.f.). 7.3. Validación (Introducción a JavaScript). https://uniwebsidad.com/libros/javascript/capitulo-7/validacion</p>
+        <p>uniwebsidad. (s.f.). 7.3. Validación (Introducción a JavaScript). <a href="https://uniwebsidad.com/libros/javascript/capitulo-7/validacion">https://uniwebsidad.com/libros/javascript/capitulo-7/validacion</a></p>
       </div>
     </section>
-
     <script src="lab6.js"></script>
-    
   </body>
 </html>
